--- a/style.css
+++ b/style.css
@@ -117,4 +117,84 @@
     width: 100%;
   }
   
- 
+  .title2 {
+    color: white;
+    display: block;
+  }
+  
+  .buttons {
+    display: flex;
+    justify-content: center;
+    margin: 30px 0;
+  }
+  button {
+    padding: 10px 20px;
+    border: none;
+    font-size: 16px;
+    font-weight: bold;
+    width: 300px;
+    height: 50px;
+    color: white;
+    background-color: #171717;
+    border-radius: 10px;
+    border: 2px solid #9dffad;
+    cursor: pointer;
+  }
+  
+  #histories {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 10px;
+    justify-content: space-around;
+  }
+  
+  .card {
+    width: 100%;
+    height: 100%;
+    
+    display: grid;
+    justify-items: center;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 30px;
+    color: white;
+    border-radius: 15px;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+      92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%
+    );
+    backdrop-filter: blur(5px);
+    margin-bottom: 30px;
+  }
+  
+  #modal-background {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+      92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%
+    );
+    backdrop-filter: blur(5px);
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+  }
+  .overflo{
+    overflow-x: hidden;
+    
+    margin-left: 0;
+    margin-right: 0;
+  }
+  
+  @media only screen and (max-width: 700px) {
+    .box-container {
+      padding: 0 20px;
+      width: 100%;
+    }
+    #histories {
+      grid-template-columns: repeat(1,1fr);
+    }
+  }
